--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 3.8)
 
 add_executable(test
 	accu_stack.cxx
+	adjacency_list.cxx
 	bound.cxx
 	clamp.cxx
 	enumerate.cxx
